# IRYM_sdk

./: .env.example  .gitignore  GUIDE.ar.md  GUIDE.md  IRYM.py  Makefile  PIPELINES.md  PUBLISH.md  README.ar.md  README.md  TRAINING.ar.md  TRAINING.md  __init__.py  install.bat  install.sh  new_folder_arch.txt  phoenix_api.py  pyproject.toml  requirements.txt  run_on_colab.py  run_svu_bot.py  setup.py  smart_git.py
api/: README.md  main.py
cache/: redis_cache.py
core/: config.py  utils.py
docs/: AGENT_GUIDE.md  API_INTEGRATION.md  DJANGO_INTEGRATION.md  GUIDE.ar.md  GUIDE.md  GUI_INTEGRATION.md  Makefile  PIPELINES.ar.md  README.ar.md  agent_guidc.py  agent_guide.md  install.sh  pyproject.toml
framework/: chatbot.py
insight/: composer.py  engine.py  optimizer.py  retriever.py  vlm_pipeline.py
llm/: __init__.py  base.py  local.py  openai.py  vlm_local.py  vlm_openai.py
memory/: semantic.py
observability/: tracing.py
phoenix/: __init__.py  main.py
rag/: pipeline.py
scratch/: arch_upgrade.py  correct_memory_split.py  fix_all_imports.py  refactor_memory_split.py  update_docs.py
svu_bot/: backend.py  bot.py  frontend.py  requirements.txt
tests/: run_all.py  test_agent.py  test_audio.py  test_cache.py  test_chatbot.py  test_insight.py  test_lifecycle.py  test_llm.py  test_memory.py  test_rag.py  test_rag_sources.py  test_security.py  test_vector.py  verify_deferred_loading.py  verify_framework_chatbot.py  verify_github.py  verify_memory.py  verify_observability.py  verify_rag.py  verify_rag_expansion.py  verify_security.py  verify_training.py  (+1 more)
(+289 files in other folders)
