[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-agent-ai"
version = "0.1.2"
description = "Advanced AI Infrastructure SDK for Agentic Applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.11.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pypdf>=3.10.0",
    "python-docx>=0.8.11",
    "qdrant-client>=1.6.0",
    "redis>=4.5.0",
    "celery>=5.3.0",
    "sqlalchemy>=2.0.0",
    "django>=5.0.0",
    "pandas",
    "openpyxl",
    "gTTS",
    "SpeechRecognition",
    "pydub",
    "Pillow",
    "psutil"
]

[project.optional-dependencies]
full = [
    "torch",
    "transformers",
    "accelerate",
    "bitsandbytes"
]

[tool.setuptools.packages.find]
include = ["phoenix*"]
